[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/RelictPreview.gd" type="Script" id=1]
[ext_resource path="res://media/Fonts/KennyFutureNarrow16.tres" type="DynamicFont" id=2]
[ext_resource path="res://media/fonts/Kenney_Future_8.tres" type="DynamicFont" id=3]

[node name="Preview" type="PanelContainer"]
margin_right = 99.0
margin_bottom = 211.0
grow_horizontal = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 92.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="RelictName" type="Label" parent="VBoxContainer"]
margin_right = 85.0
margin_bottom = 9.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Relic"
align = 1
autowrap = true

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 85.0
margin_bottom = 87.0
rect_min_size = Vector2( 85, 16 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 78.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
expand = true

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 85.0
margin_bottom = 197.0
rect_min_size = Vector2( 85, 110 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Relict_label" type="RichTextLabel" parent="VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 78.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 85 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
